Fixat "Home" länk i navbar Fixat Badges alignement Fixat så långa testnamn klipps av

--- a/TestResultRepoWebSite/Content/slate.bootstrap.css
+++ b/TestResultRepoWebSite/Content/slate.bootstrap.css
@@ -54,6 +54,13 @@
     padding: 5px;
 }
 
+.truncate {
+    width: 90%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 *,
 *::before,
 *::after {
@@ -5101,15 +5108,19 @@ input[type="button"].btn-block {
 }
 
 .badge {
-  display: inline-block;
-  padding: 0.25em 0.4em;
-  font-size: 75%;
-  font-weight: 700;
-  line-height: 1;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: baseline;
-  border-radius: 0.25rem;
+    display: inline-block;
+    padding: 0.25em 0.4em;
+    font-size: 75%;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: 0.25rem;
+    border-color: #272B30;
+    border-style: solid;
+    border-width: 0.15rem;
+    margin: 0rem 0.05rem;
 }
 
 .badge:empty {
